<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".presentation.PagePayment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmarket_removebg_preview_2" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:background="@drawable/view_background"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/subtotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="@string/subtotalTextString"
                android:textAlignment="center"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/subtotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/subtotal" />

            <TextView
                android:id="@+id/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="@string/subtotalDefaultString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/subtotalText"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                app:layout_constraintBottom_toTopOf="@id/creditCardInfoHeader"
                android:background="@color/walmarketYellow"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/creditCardInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/creditCardInfoHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/nameofCardHolderHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/nameOfCardHolderHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/nameofCardHolder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/nameofCardHolder" />

            <EditText
                android:id="@+id/nameofCardHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:fontFamily="casual"
                android:inputType="text"
                android:singleLine="true"
                android:maxLength="30"
                android:hint="@string/nameOfCardHolderHintString"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/walmarketBlue"
                android:textColorHint="@color/walmarketBlue"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/nameofCardHolderHeader"
                app:layout_constraintTop_toBottomOf="@id/creditCardInfoHeader" />

            <TextView
                android:id="@+id/creditCardNumHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/creditCardNumHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/creditCardNum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/creditCardNum" />

            <EditText
                android:id="@+id/creditCardNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:fontFamily="casual"
                android:hint="@string/creditCardNumHintString"
                android:padding="10dp"
                android:maxLength="16"
                android:textAlignment="center"
                android:textColor="@color/walmarketBlue"
                android:textColorHint="@color/walmarketBlue"
                android:inputType="number"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/creditCardNumHeader"
                app:layout_constraintTop_toBottomOf="@id/nameofCardHolder" />

            <TextView
                android:id="@+id/creditCardTypeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/creditCardTypeHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cvv"
                app:layout_constraintStart_toStartOf="parent"
                />

            <RadioGroup
                android:id="@+id/creditCardType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="@id/creditCardTypeHeader"
                app:layout_constraintEnd_toEndOf="@id/creditCardTypeHeader"
                app:layout_constraintTop_toBottomOf="@id/creditCardTypeHeader"
                app:layout_constraintBottom_toBottomOf="parent">

                <RadioButton
                    android:id="@+id/masterCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/masterCardString"
                    android:textAlignment="center"
                    android:textColor="@color/walmarketYellow"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/visa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/visaString"
                    android:textAlignment="center"
                    android:textColor="@color/walmarketYellow"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RadioGroup>

            <TextView
                android:id="@+id/expiryDateHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/expiryDateHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/expiryDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/expiryDate" />

            <EditText
                android:id="@+id/expiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:fontFamily="casual"
                android:hint="@string/expiryDateHintString"
                android:padding="10dp"
                android:textColor="@color/walmarketBlue"
                android:textColorHint="@color/walmarketBlue"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/expiryDateHeader"
                app:layout_constraintTop_toBottomOf="@id/creditCardNum" />

            <TextView
                android:id="@+id/cvvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/cvvHeaderString"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/cvv"
                app:layout_constraintBottom_toBottomOf="@id/cvv"
                app:layout_constraintStart_toEndOf="@id/expiryDate"/>

            <EditText
                android:id="@+id/cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:fontFamily="casual"
                android:hint="@string/cvvHintString"
                android:padding="10dp"
                android:textColor="@color/walmarketBlue"
                android:textColorHint="@color/walmarketBlue"
                android:maxLength="3"
                android:inputType="number"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/creditCardNum"
                app:layout_constraintStart_toEndOf="@id/cvvHeader"
                />

            <ImageView
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:src="@drawable/walmarket_image"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toTopOf="@id/paymentButton"
                app:layout_constraintStart_toEndOf="@id/creditCardNum"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/paymentButton"
                android:layout_margin="15dp"
                android:backgroundTint="@color/walmarketYellow"
                android:fontFamily="casual"
                android:textColor="@color/walmarketBlue"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="@string/goBackButtonString"
                android:onClick="onGoBack"/>

            <Button
                android:id="@+id/paymentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="15dp"
                android:backgroundTint="@color/walmarketYellow"
                android:fontFamily="casual"
                android:textColor="@color/walmarketBlue"
                android:textAlignment="center"
                android:onClick="onProcessPayment"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="@string/paymentButtonString"/>

            <CheckBox
                android:id="@+id/savePaymentCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="casual"
                android:text="@string/savePaymentCheckboxString"
                android:textAlignment="center"
                android:textColor="@color/walmarketYellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/goBackButton"
                app:layout_constraintEnd_toStartOf="@id/goBackButton"
                app:layout_constraintStart_toEndOf="@id/creditCardType"
                app:layout_constraintTop_toTopOf="@id/goBackButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>