...
                android:backgroundTint="@color/walmarketYellow"
                android:fontFamily="casual"
                android:text="@string/decrementCartQuantityButtonString"
                android:textAlignment="center"
                android:textColor="@color/walmarketBlue"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@id/specialButton"
                app:layout_constraintEnd_toStartOf="@id/cartQuantity"
                app:layout_constraintTop_toTopOf="@id/specialButton" />

            <EditText
                android:id="@+id/cartQuantity"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:ems="100"
                android:inputType="number"
                app:layout_constraintTop_toTopOf="@id/specialButton"
                app:layout_constraintBottom_toBottomOf="@id/specialButton"
                app:layout_constraintEnd_toStartOf="@id/incrementCartQuantity"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:text="@string/cartQuantityDefaultString"
                android:textColor="@color/walmarketBlue"
                android:textAlignment="center"
                android:textSize="25sp"
...
